cmake_minimum_required(VERSION 3.26)
project(Coursework_1_Operating_Systems_Simulate_Bankers_algorithm_for_Deadlock_Avoidance_using_C___or_Bash__Arbaaz_Ali_Hussain_M00872279_)

set(CMAKE_CXX_STANDARD 17)

add_executable(Coursework_1_Operating_Systems_Simulate_Bankers_algorithm_for_Deadlock_Avoidance_using_C___or_Bash__Arbaaz_Ali_Hussain_M00872279_ main.cpp)
